<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />
    
    <item
        android:id="@+id/action_filter"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_templates"
        android:title="@string/action_templates"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_categories"
        android:title="@string/categories"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_bookmarks"
        android:title="Bookmarks"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_sync"
        android:title="Sync Now"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu> 