<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_share_24dp"
        app:showAsAction="never" />
    
    <item
        android:id="@+id/action_follow_author"
        android:title="@string/action_follow_author"
        android:icon="@drawable/ic_person_add_24dp"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_save_for_later"
        android:title="@string/action_save_for_later"
        android:icon="@drawable/ic_bookmark_border_24dp"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_mute"
        android:title="@string/action_mute_topic"
        android:icon="@drawable/ic_volume_off_24dp"
        app:showAsAction="never" />
        
    <item
        android:id="@+id/action_report"
        android:title="@string/action_report"
        android:icon="@drawable/ic_flag_24dp"
        app:showAsAction="never" />
</menu> 